--- a/PostViewerApp/PostViewerApp/PostViewerApp/CommentPage.xaml
+++ b/PostViewerApp/PostViewerApp/PostViewerApp/CommentPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PostViewerApp.CommentPage">
 
-    <AbsoluteLayout Margin="5">
+    <StackLayout>
         <ListView x:Name="CommentsListView" RowHeight="150" >
             <ListView.ItemTemplate>
                 <DataTemplate>
@@ -35,6 +35,6 @@
                            IsRunning="True"
                            AbsoluteLayout.LayoutBounds="0.5,0.5,50,50"   
                            AbsoluteLayout.LayoutFlags="XProportional,YProportional"/>
-    </AbsoluteLayout>
+    </StackLayout>
 
 </ContentPage>
