--- a/PostViewerApp/PostViewerApp/PostViewerApp/ListPage.xaml
+++ b/PostViewerApp/PostViewerApp/PostViewerApp/ListPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PostViewerApp.ListPage">
 
-    <AbsoluteLayout Margin="5">
+    <StackLayout Margin="5">
         <ListView x:Name="PostsListView" RowHeight="60" >
             <ListView.ItemTemplate>
                 <DataTemplate>
@@ -29,9 +29,7 @@
             </ListView.ItemTemplate>
         </ListView>
 
-        <ActivityIndicator x:Name="ActivityIndicator" IsRunning="True"
-                           AbsoluteLayout.LayoutBounds="0.5,0.5,50,50"   
-                           AbsoluteLayout.LayoutFlags="XProportional,YProportional" Color="Blue"/>
+        <ActivityIndicator x:Name="ActivityIndicator" IsRunning="True"/>
 
-    </AbsoluteLayout>
+    </StackLayout>
 </ContentPage>
